--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 This repository contains the site files for the old Recess Blog, as well as two database dumps (one with complete inserts, and another with just the data). Contact me with any questions.
 
 LTK
+
+Testing commit from GitHub gui
